Rese coerenti le classi di GUI e creati ulteriori sottometodi per rendere il codice più leggibile