@@ -1,17 +1,23 @@
 package it.unicam.cs.mpgc.rpg125585.gui;
 
+import it.unicam.cs.mpgc.rpg125585.backend.artefatti.Artefatto;
 import it.unicam.cs.mpgc.rpg125585.backend.convertitori.StatoGiocoLocale;
 import it.unicam.cs.mpgc.rpg125585.backend.entita.giocatore.Giocatore;
 import it.unicam.cs.mpgc.rpg125585.backend.entita.nemici.Nemico;
 import it.unicam.cs.mpgc.rpg125585.backend.gestionecombattimenti.GestoreCombattimento;
 import it.unicam.cs.mpgc.rpg125585.backend.mappa.stanze.StanzaCombattimento;
+import it.unicam.cs.mpgc.rpg125585.backend.mappa.stanze.StanzaGenerica;
+import it.unicam.cs.mpgc.rpg125585.backend.mappa.stanze.StanzaLoot;
 import it.unicam.cs.mpgc.rpg125585.dto.*;
 
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
+import javafx.stage.Stage;
 
 import java.io.IOException;
 import java.util.List;
@@ -71,7 +77,6 @@ public class GiocoController {
                 Giocatore giocatoreReale = this.statoLogicoBackend.giocatore();
                 StanzaCombattimento stanzaCombatReale = (StanzaCombattimento) this.statoLogicoBackend.mappaStanze()
                         .get(stanzaCorrente.getIdStanza());
-                // NOTA: Qui dovrai passare il giocatore vero e la lista nemici dal tuo modello/DTO
                 List<Nemico> nemiciReali = stanzaCombatReale.getNemiciStanza();
                 this.gestoreCombattimento = new GestoreCombattimento(giocatoreReale, nemiciReali);
             }
@@ -108,7 +113,7 @@ public class GiocoController {
         if(artefatti != null  && !artefatti.isEmpty()) {
             btnPrendiArtefatto.setDisable(false);
             if(artefatti.size() == 1) {
-                ArtefattoDTO artefatto = artefatti.get(0);
+                ArtefattoDTO artefatto = artefatti.getFirst();
                 lblNomeArtefatto.setText(artefatto.getNomeArtefatto());
                 lblDescrizioneArtefatto.setText(artefatto.getDescrizioneArtefatto());
             } else {
@@ -217,22 +222,141 @@ public class GiocoController {
         return null;
     }
 
+    private void sincronizzaDTOConBackend() {
+        this.statoPartita.setGiocatore(new GiocatoreDTO(this.statoLogicoBackend.giocatore()));
+        this.statoPartita.setIdStanzaCorrente(this.statoLogicoBackend.giocatore().getStanzaCorrente().getIdStanza());
+        List<StanzaDTO> stanzeAggiornate = this.statoLogicoBackend.mappaStanze().values().stream()
+                .map(StanzaDTO::new)
+                .toList();
+        this.statoPartita.setMappaStanze(stanzeAggiornate);
+    }
+
+    private void eseguiSpostamentoGiocatore(int idNuovaStanza, String direzioneErrore) {
+        if (idNuovaStanza != -1) {
+            // 1. Sposta il giocatore nel backend reale
+            StanzaGenerica nuovaStanza = this.statoLogicoBackend.mappaStanze().get(idNuovaStanza);
+            this.statoLogicoBackend.giocatore().setStanzaCorrente(nuovaStanza);
+            // 2. Sincronizza i DTO grafici
+            sincronizzaDTOConBackend();
+            // 3. Auto-salvataggio su file JSON
+            new it.unicam.cs.mpgc.rpg125585.backend.convertitori.ConvertitorePartita()
+                    .salvaPartitaInCorso(
+                            "salvataggi/salvataggio.json",
+                            this.statoLogicoBackend.giocatore(),
+                            this.statoLogicoBackend.mappaStanze()
+                    );
+            // 4. Aggiorna l'interfaccia visiva
+            aggiornaGrafica();
+        } else {
+            mostraAllertaErrore("Muro!", "Non c'è nessuna stanza a " + direzioneErrore + ".");
+        }
+    }
+
+    private void gestisciTurnoCombattimento() {
+        StanzaDTO stanzaCorrente = trovaStanzaCorrente();
+        if(stanzaCorrente == null) {
+            return;
+        }
+        StanzaCombattimento stanzaCombatReale = (StanzaCombattimento) this.statoLogicoBackend.mappaStanze().get(stanzaCorrente.getIdStanza());
+        Nemico nemicoDaColpire = stanzaCombatReale.getNemiciStanza().get(indiceNemicoTarget);
+        gestoreCombattimento.cambiaBersaglio(nemicoDaColpire);
+        boolean attaccoEseguito = gestoreCombattimento.eseguiTurnoAttacco();
+        if (!attaccoEseguito) return;
+        if (this.statoLogicoBackend.giocatore().getPuntiVita() <= 0) {
+            mostraAllertaErrore("Sei Morto!", "I tuoi punti vita sono scesi a zero. Il gioco è terminato.");
+            caricaSchermataMenuPrincipale();
+            return;
+        }
+        // 2. Controllo Vittoria
+        if (!gestoreCombattimento.ciSonoNemiciVivi()) {
+            System.out.println("Combattimento Terminato! Vittoria!");
+            this.gestoreCombattimento = null;
+        }
+        // 3. Refresh dell'interfaccia
+        aggiornaGrafica();
+    }
+
+    private void caricaSchermataMenuPrincipale() {
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/schermata_menu_principale.fxml"));
+            javafx.scene.Parent root = loader.load();
+            Stage stageCorrente = (Stage) btnStanzaNord.getScene().getWindow();
+            stageCorrente.setScene(new Scene(root));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
     @FXML
     public void handleStanzaNord(ActionEvent event) {
         StanzaDTO stanza = trovaStanzaCorrente();
         if (stanza != null && stanza.isStanzaCombattimento()) {
-            // 1. Diciamo al gestore di calcolare il turno di attacco
-            boolean attaccoEseguito = gestoreCombattimento.eseguiTurnoAttacco();
-            if (attaccoEseguito) {
-                // 2. Se il combattimento è finito (tutti morti), il backend imposterà il target a null
-                if (!gestoreCombattimento.ciSonoNemiciVivi()) {
-                    System.out.println("Combattimento Terminato! Vittoria!");
-                }
-                // 3. Rinfreschi la GUI (le label con la vita calata si aggiornano da sole!)
-                aggiornaGrafica();
+            gestisciTurnoCombattimento();
+            } else if(stanza != null) {
+                StanzaGenerica stanzaReale = this.statoLogicoBackend.mappaStanze().get(stanza.getIdStanza());
+                int idProssima = (stanzaReale.getStanzaNord() != null) ? stanzaReale.getStanzaNord().getIdStanza() : -1;
+                eseguiSpostamentoGiocatore(idProssima, "Nord");
+        }
+    }
+
+    @FXML
+    public void handleStanzaSud(ActionEvent event) {
+        StanzaDTO stanza = trovaStanzaCorrente();
+        // Il Sud è disabilitato in combattimento da mostraAreaCombattimento(), quindi gestiamo solo il movimento liscio
+        if (stanza != null) {
+            StanzaGenerica stanzaReale = this.statoLogicoBackend.mappaStanze().get(stanza.getIdStanza());
+            int idProssima = (stanzaReale.getStanzaSud()  != null) ? stanzaReale.getStanzaSud().getIdStanza() : -1;
+            eseguiSpostamentoGiocatore(idProssima, "Sud");
+        }
+    }
+
+    @FXML
+    public void handleStanzaEst(ActionEvent event) {
+        StanzaDTO stanza = trovaStanzaCorrente();
+        if (stanza != null && stanza.isStanzaCombattimento()) {
+            indiceNemicoTarget++;
+            aggiornaGrafica();
+        } else if (stanza != null){
+            StanzaGenerica stanzaReale = this.statoLogicoBackend.mappaStanze().get(stanza.getIdStanza());
+            int idProssima = (stanzaReale.getStanzaEst()  != null) ? stanzaReale.getStanzaEst().getIdStanza() : -1;
+            eseguiSpostamentoGiocatore(idProssima, "Est");
+        }
+    }
+
+    @FXML
+    public void handleStanzaOvest(ActionEvent event) {
+        StanzaDTO stanza = trovaStanzaCorrente();
+        if (stanza != null && stanza.isStanzaCombattimento()) {
+            if (indiceNemicoTarget > 0) {
+                indiceNemicoTarget--;
+            } else {
+                indiceNemicoTarget = stanza.getNemiciNellaStanza().size() - 1;
             }
-        } else {
-            // Logica di movimento standard verso Nord
+            aggiornaGrafica();
+        } else if(stanza != null){
+            StanzaGenerica stanzaReale = this.statoLogicoBackend.mappaStanze().get(stanza.getIdStanza());
+            int idProssima = (stanzaReale.getStanzaOvest() != null) ? stanzaReale.getStanzaOvest().getIdStanza() : -1;
+            eseguiSpostamentoGiocatore(idProssima, "Ovest");
+        }
+    }
+
+    @FXML
+    public void handlePrendiArtefatto(ActionEvent event) {
+        StanzaDTO stanzaCorrente = trovaStanzaCorrente();
+        if (stanzaCorrente != null && stanzaCorrente.isStanzaLoot()) {
+            StanzaGenerica stanzaRealeGenerica = this.statoLogicoBackend.mappaStanze().get(stanzaCorrente.getIdStanza());
+            if (stanzaRealeGenerica instanceof StanzaLoot stanzaReale) {
+                if(!stanzaReale.getArtefattiStanza().isEmpty()) {
+                    Artefatto artefatto = stanzaReale.getArtefattiStanza().removeFirst();
+                    this.statoLogicoBackend.giocatore().aggiungiAllInventario(artefatto);
+                    System.out.println("Raccolto: " + artefatto.getNomeArtefatto());
+                    sincronizzaDTOConBackend();
+                    new it.unicam.cs.mpgc.rpg125585.backend.convertitori.ConvertitorePartita()
+                            .salvaPartitaInCorso("salvataggi/salvataggio.json",
+                                    this.statoLogicoBackend.giocatore(), this.statoLogicoBackend.mappaStanze());
+                    aggiornaGrafica();
+                }
+            }
         }
     }
 }
